--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -38,6 +38,7 @@ executing==1.2.0
 fastapi==0.111.1
 fastapi-cli==0.0.4
 filelock==3.15.4
+flash-attn==2.6.3
 fonttools==4.41.1
 frozenlist==1.3.3
 fsspec==2024.3.0
@@ -150,6 +151,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2022.7.1
+PyYAML==6.0
 pyzmq==25.0.2
 rapidfuzz==3.1.1
 ray==2.33.0
@@ -166,11 +168,16 @@ safetensors==0.4.2
 scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.13.0
+sentence-transformers==3.2.1
+sentencepiece==0.1.96
 seqeval==1.2.2
 shellingham==1.5.4
 six==1.16.0
 smart-open==6.3.0
 sniffio==1.3.1
+spacy==3.5.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
 srsly==2.4.6
 stack-data==0.6.2
 stanza==1.6.1
@@ -203,6 +210,7 @@ wasabi==1.1.1
 watchfiles==0.22.0
 wcwidth==0.2.6
 websockets==12.0
+wesanderson==0.0.3
 widgetsnbextension==4.0.10
 xformers==0.0.27
 xxhash==3.2.0
